<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="150dp"
            android:paddingBottom="20dp"
            android:text="@string/about_explain"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appImg"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:background="@color/primary_title"
            android:padding="16dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                android:scaleType="fitCenter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/logo"
                android:contentDescription="Drawer's header image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@id/appImg"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/about_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/about_app"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/about_app" />

        <TextView
            android:id="@+id/about_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/about_version"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:text="Miguel Manzano Martín" />

    </LinearLayout>
</layout>
